<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RechercheRvActivity"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:paddingTop="8dp"/>

    <Spinner
        android:id="@+id/monthSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:prompt="@string/month_prompt"/>

    <Spinner
        android:id="@+id/yearSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:prompt="@string/year_prompt"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="10dp"
        android:text="@string/valider"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="10dp"
        android:text="@string/retour"
        style="?android:attr/buttonBarButtonStyle" />

</LinearLayout>